# public_speaking_helper

./: .gitignore  main.py  pyproject.toml
docs/: index.html  model_init.html  search.js  transcription_utils.html
tests/: test_transcription_utils.py
transcription_utils/: __init__.py
