[project]
name = "public-speaking-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-whisper>=20250625",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
